--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-This is your new Play application
-=================================
+Zentasks Play Tutorial
+-----------------------
 
-This file will be packaged with your application, when using `activator dist`.
+This application follows a Play Framework tutorial to build a simple task manager, with some modifications to work with Play 2.4.
+The tutorial is located at the following url: http://www.playframework.com/documentation/2.1.x/JavaGuide1
